rewrite c-code to comply with c89 standard

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ endif()
 add_definitions(-DSYKTRUSTJAR="${JAR}")
 if (WIN32)
 	message ("This is a WIN32 machine!")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32=tWallWallrue")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32=true")
 	
 else()
 	message ("This is a linux machine!")
@@ -29,6 +29,7 @@ else()
 endif()
 
 SET(LIBSRC "C/src/pkcs11.c")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c99 -pedantic")
 add_library(skytrustpkcs11 SHARED ${LIBSRC})
 target_link_libraries(skytrustpkcs11 ${JAVA_JVM_LIBRARY})
 install(TARGETS skytrustpkcs11 DESTINATION ${CMAKE_INSTALL_PREFIX}/) 
