cmake in progress

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,34 +1,33 @@
 cmake_minimum_required(VERSION 2.8)
 project (skytrust-pkcs11)
 
-SET(CMAKE_INSTALL_PREFIX "/usr/lib/skytrust/")
-
-SET(CMAKE_BUILD_TYPE Debug)
-
+SET(CMAKE_BUILD_TYPE Release)
 FIND_PACKAGE(JNI REQUIRED)
-
 include_directories(${JNI_INCLUDE_DIRS})
-
 LINK_DIRECTORIES(${JNI_LIBRARIES})
 
+add_definitions(-DSYKTRUSTJAR="${PROJECT_BINARY_DIR}/lib/PKCS11.jar")
 
-if (NOT JAR)
-SET(JAR "/usr/lib/skytrust/PKCS11.jar")
-endif()
-
-add_definitions(-DSYKTRUSTJAR="${JAR}")
 if (WIN32)
 	message ("This is a WIN32 machine!")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32=true")
+	add_definitions(-DSYKTRUSTJAR="${CMAKE_ROOT}/lib")
 	
-else()
+elseif (UNIX)
 	message ("This is a linux machine!")
-	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c90 -pedantic")
+	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99 -pedantic")
+	ADD_CUSTOM_TARGET(ant_build ant jar)
+	ADD_CUSTOM_COMMAND(TARGET ant_build COMMAND ant)
+
+elseif (APPLE)
+	message ("This is a mac machine!")
+	
 
 endif()
 
-SET(LIBSRC "C/src/pkcs11.c")
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c99 -pedantic")
+SET(LIBSRC "src/C/src/pkcs11.c")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c89 -pedantic")
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 add_library(skytrustpkcs11 SHARED ${LIBSRC})
 target_link_libraries(skytrustpkcs11 ${JAVA_JVM_LIBRARY})
-install(TARGETS skytrustpkcs11 DESTINATION ${CMAKE_INSTALL_PREFIX}/) 
+#install(TARGETS skytrustpkcs11 DESTINATION ${CMAKE_INSTALL_PREFIX}/lib) 
