--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,9 +10,7 @@ add_definitions(-DSYKTRUSTJAR="${PROJECT_BINARY_DIR}/lib/PKCS11.jar")
 
 if (WIN32)
 	message ("This is a WIN32 machine!")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32=true")
-	add_definitions(-DSYKTRUSTJAR="${CMAKE_ROOT}/lib")
-	
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32=true ")
 elseif (UNIX)
 	message ("This is a linux machine!")
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99 -pedantic")
@@ -28,6 +26,9 @@ endif()
 SET(LIBSRC "src/C/src/pkcs11.c")
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=c89 -pedantic")
 SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${PROJECT_BINARY_DIR}/lib)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${PROJECT_BINARY_DIR}/lib)
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 add_library(skytrustpkcs11 SHARED ${LIBSRC})
 target_link_libraries(skytrustpkcs11 ${JAVA_JVM_LIBRARY})
 #install(TARGETS skytrustpkcs11 DESTINATION ${CMAKE_INSTALL_PREFIX}/lib) 
