--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ add_definitions(-DSYKTRUSTJAR="${PROJECT_BINARY_DIR}/lib/PKCS11.jar")
 if (WIN32)
 	message ("This is a WIN32 machine!")
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DWIN32=true ")
-elseif (UNIX)
+else()
 	message ("This is a linux machine!")
 	SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -std=c99 -pedantic")
 	ADD_CUSTOM_TARGET(ant_build ant jar)
