--- a/modules/commons/java/pom.xml
+++ b/modules/commons/java/pom.xml
@@ -17,6 +17,13 @@
     </plugins>
   </build>
     <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.5</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Logging -->
         <dependency>
             <groupId>org.slf4j</groupId>
