init simplest static key encryption actor

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>commons/java</module>
+        <module>actors/java/staticKeyEncryptionActor</module>
     </modules>
 
     <properties>
