simplest actor knows discover keys

--- a/modules/actors/java/staticKeyEncryption/pom.xml
+++ b/modules/actors/java/staticKeyEncryption/pom.xml
@@ -17,5 +17,13 @@
   		<artifactId>commons</artifactId>
   		<version>${crysil.version}</version>
   	</dependency>
+
+    <!-- Test -->
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>${testng.version}</version>
+        <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
