--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -19,7 +19,12 @@
         <java.version>1.7</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <crysil.version>2.0-1</crysil.version><!-- TODO: e.g. 1.3-1 -->
+
+        <!-- Logging -->
         <logback.version>1.1.2</logback.version>
+
+        <!-- Testing -->
+        <testng.version>6.8.21</testng.version>
 
         <!-- Maven plugins -->
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
