protocol impl now takes and talks bytearray

--- a/modules/commons/java/pom.xml
+++ b/modules/commons/java/pom.xml
@@ -17,5 +17,13 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
+        
+        <!-- Misc -->
+        <dependency>
+            <artifactId>guava</artifactId>
+            <groupId>com.google.guava</groupId>
+            <type>jar</type>
+            <version>${guava.version}</version>
+        </dependency>
     </dependencies>
 </project>
