protocol impl now talks certificates

--- a/modules/commons/java/pom.xml
+++ b/modules/commons/java/pom.xml
@@ -10,6 +10,11 @@
         <relativePath>../..</relativePath>
     </parent>
 
+	<properties>
+        <!-- Misc -->
+        <guava.version>14.0.1</guava.version>
+	</properties>
+
     <dependencies>
         <!-- Logging -->
         <dependency>
