added gson helper for JSON serialization

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -12,6 +12,7 @@
     <modules>
         <module>commons/java</module>
         <module>actors/java/staticKeyEncryption</module>
+        <module>communications/java/http-json-commons</module>
     </modules>
 
     <properties>
