added http json receiver

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -13,6 +13,7 @@
         <module>commons/java</module>
         <module>actors/java/staticKeyEncryption</module>
         <module>communications/java/http-json-commons</module>
+        <module>communications/java/http-json-receiver</module>
     </modules>
 
     <properties>
