--- a/modules/communications/java/http-json-transmitter/pom.xml
+++ b/modules/communications/java/http-json-transmitter/pom.xml
@@ -33,7 +33,7 @@
         
         <dependency>
 	        <groupId>org.crysil.communications</groupId>
-	        <artifactId>http-json-commons</artifactId>
+	        <artifactId>json-commons</artifactId>
 	        <version>${crysil.version}</version>
         </dependency>
         
