--- a/modules/communications/java/json-commons/pom.xml
+++ b/modules/communications/java/json-commons/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>org.crysil.communications</groupId>
-  <artifactId>http-json-commons</artifactId>
+  <artifactId>json-commons</artifactId>
 
   <parent>
   	<groupId>org.crysil</groupId>
