added transmitter test

--- a/modules/communications/java/http-json-transmitter/pom.xml
+++ b/modules/communications/java/http-json-transmitter/pom.xml
@@ -43,5 +43,13 @@
             <artifactId>okhttp</artifactId>
             <version>${okhttp.version}</version>
         </dependency>
+
+        <!-- Test -->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>${testng.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
