--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -13,11 +13,13 @@
         <module>commons/java</module>
         <module>actors/java/staticKeyEncryption</module>
         <module>actors/java/smcc</module>
+        <module>actors/java/u2f-android</module>
         <module>communications/java/json-commons</module>
         <module>communications/java/u2f-commons</module>
         <module>communications/java/http-json-receiver</module>
         <module>communications/java/u2f-http-json-receiver</module>
         <module>communications/java/http-json-transmitter</module>
+        <module>communications/java/u2f-websocket-receiver</module>
     </modules>
 
     <properties>
@@ -29,6 +31,7 @@
         <!--- Dependencies -->
         <mocca.version>1.3.22</mocca.version>
         <logback.version>1.1.2</logback.version>
+        <netty.version>4.0.28.Final</netty.version>
 
         <!-- Testing -->
         <testng.version>6.8.21</testng.version>
