U2F: Fix JSON handling

--- a/modules/communications/java/json-commons/pom.xml
+++ b/modules/communications/java/json-commons/pom.xml
@@ -35,5 +35,13 @@
             <artifactId>json-schema-validator</artifactId>
             <version>${json-schema-validator.version}</version>
         </dependency>
+        
+		<!-- Test -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+			<scope>test</scope>
+		</dependency>
     </dependencies>
 </project>
