--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -13,6 +13,7 @@
         <module>commons/java</module>
         <module>actors/java/staticKeyEncryption</module>
         <module>actors/java/smcc</module>
+        <module>actors/java/u2f-pkcs11</module>
         <module>communications/java/json-commons</module>
         <module>communications/java/u2f-commons</module>
         <module>communications/java/http-json-receiver</module>
@@ -29,6 +30,10 @@
         <!--- Dependencies -->
         <mocca.version>1.3.22</mocca.version>
         <logback.version>1.1.2</logback.version>
+        <iaik-jce.version>5.3</iaik-jce.version>
+        <iaik-ecc.version>3.01</iaik-ecc.version>
+        <iaik-pkcs11provider.version>1.5</iaik-pkcs11provider.version>
+        <iaik-pkcs11wrapper.version>1.4</iaik-pkcs11wrapper.version>
 
         <!-- Testing -->
         <testng.version>6.8.21</testng.version>
@@ -39,6 +44,13 @@
         <maven-compiler-plugin.version>3.2</maven-compiler-plugin.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>iaikStudent</id>
+            <url>https://nexus.student.iaik.tugraz.at/content/groups/public</url>
+        </repository>
+    </repositories>
+    
     <build>
         <plugins>
             <plugin>
