Introduce Spongy Castle actor and use it on Android

--- a/samples/android/instance/pom.xml
+++ b/samples/android/instance/pom.xml
@@ -29,6 +29,12 @@
 			<version>${crysil.version}</version>
 		</dependency>
 
+        <dependency>
+			<groupId>org.crysil.actor</groupId>
+			<artifactId>u2f-spongycastle</artifactId>
+			<version>${crysil.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.crysil.communications</groupId>
 			<artifactId>u2f-commons</artifactId>
