--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -14,6 +14,7 @@
         <module>actors/java/staticKeyEncryption</module>
         <module>actors/java/smcc</module>
         <module>actors/java/u2f-android</module>
+        <module>actors/java/u2f-spongycastle</module>
         <module>communications/java/json-commons</module>
         <module>communications/java/u2f-commons</module>
         <module>communications/java/http-json-receiver</module>
@@ -32,6 +33,9 @@
         <mocca.version>1.3.22</mocca.version>
         <logback.version>1.1.2</logback.version>
         <netty.version>4.0.28.Final</netty.version>
+        <spongycastle.version>1.54.0.0</spongycastle.version>
+        <gson.version>2.6.1</gson.version>
+        <json-schema-validator.version>2.2.6</json-schema-validator.version>  
 
         <!-- Testing -->
         <testng.version>6.8.21</testng.version>
