--- a/modules/communications/java/http-json-receiver/pom.xml
+++ b/modules/communications/java/http-json-receiver/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.crysil.communcations</groupId>
+    <groupId>org.crysil.communications</groupId>
     <artifactId>http-json-receiver</artifactId>
     <packaging>war</packaging>
 
