Gatekeeper+Auth foundation, CMS Streams
Introduces a gatekeeper and an interceptor which can be used to model and execute auth processes to restict access to operations, also includes a challenge-response auth mechanism

CMS Enveloped-Data Streams:
Includes mechanisms to manually extract encrypted content-encryption keys, manually unwrap these keys to finally manually decrypt the underlying encrypted data.
This opens up the possibility of carrying out the unwrapping procedure independently from the bulk decryption process.
CMS signed-sata stream are also supported

--- a/modules/actors/java/staticKeyEncryption/pom.xml
+++ b/modules/actors/java/staticKeyEncryption/pom.xml
@@ -13,7 +13,7 @@
 
   <dependencies>
   	<dependency>
-  		<groupId>org.crysil.commons</groupId>
+  		<groupId>org.crysil</groupId>
   		<artifactId>commons</artifactId>
   		<version>${crysil.version}</version>
   	</dependency>
