--- a/modules/communications/java/http-json-receiver/pom.xml
+++ b/modules/communications/java/http-json-receiver/pom.xml
@@ -27,7 +27,7 @@
     
         <!-- CrySIL -->
         <dependency>
-	        <groupId>org.crysil.commons</groupId>
+	        <groupId>org.crysil</groupId>
 	        <artifactId>commons</artifactId>
 	        <version>${crysil.version}</version>
         </dependency>
