--- a/modules/communications/java/http-json-transmitter/pom.xml
+++ b/modules/communications/java/http-json-transmitter/pom.xml
@@ -26,7 +26,7 @@
     <dependencies>
         <!-- CrySIL -->
         <dependency>
-	        <groupId>org.crysil.commons</groupId>
+	        <groupId>org.crysil</groupId>
 	        <artifactId>commons</artifactId>
 	        <version>${crysil.version}</version>
         </dependency>
