--- a/modules/actors/java/invertedTrustActor/pom.xml
+++ b/modules/actors/java/invertedTrustActor/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>org.crysil.actor</groupId>
-  <artifactId>invertdTrustActor</artifactId>
+  <artifactId>invertedtrust</artifactId>
   
     <parent>
         <artifactId>main</artifactId>
