J8 compat, remove JS dependency

--- a/instances/gridh-desktop/pom.xml
+++ b/instances/gridh-desktop/pom.xml
@@ -34,11 +34,11 @@
       <artifactId>auth-challenge-response</artifactId>
       <version>${crysil.version}</version>
     </dependency>
-    <dependency>
-      <groupId>org.mozilla</groupId>
-      <artifactId>rhino</artifactId>
-      <version>1.7.7</version>
-    </dependency>
+<!--     <dependency> -->
+<!--       <groupId>org.mozilla</groupId> -->
+<!--       <artifactId>rhino</artifactId> -->
+<!--       <version>1.7.7</version> -->
+<!--     </dependency> -->
     <dependency>
       <groupId>org.apache.bsf</groupId>
       <artifactId>bsf-all</artifactId>
