Add OAuth, refactor existing auth plugins

--- a/modules/communications/java/http-json-transmitter/pom.xml
+++ b/modules/communications/java/http-json-transmitter/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-  ~ SkyTrust Core
+  ~ crysil Core
   ~ This file is subject to the license defined in the directory “license” at the top level of this package.
   -->
 
