--- a/modules/actors/java/staticKeyEncryption/pom.xml
+++ b/modules/actors/java/staticKeyEncryption/pom.xml
@@ -10,6 +10,7 @@
         <version>2.0-1</version>
         <relativePath>../../..</relativePath>
     </parent>
+   
 
   <dependencies>
   	<dependency>
@@ -25,6 +26,30 @@
         <version>${testng.version}</version>
         <scope>test</scope>
     </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
+    
 
+
+    <dependency>
+    	<groupId>org.bouncycastle</groupId>
+    	<artifactId>bcmail-jdk15on</artifactId>
+    	<version>1.54</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.bouncycastle</groupId>
+    	<artifactId>bcpkix-jdk15on</artifactId>
+    	<version>1.54</version>
+    </dependency>
+    <dependency>
+    	<groupId>org.bouncycastle</groupId>
+    	<artifactId>bcprov-jdk15on</artifactId>
+    	<version>1.54</version>
+    </dependency>
   </dependencies>
 </project>
