--- a/samples/webservice-with-auth-and-keydatabase/pom.xml
+++ b/samples/webservice-with-auth-and-keydatabase/pom.xml
@@ -32,8 +32,8 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.crysil.communications</groupId>
-			<artifactId>u2f-commons</artifactId>
+			<groupId>org.crysil</groupId>
+			<artifactId>gatekeeper</artifactId>
 			<version>${crysil.version}</version>
 		</dependency>
 
