--- a/samples/webservice-with-auth-and-keydatabase/pom.xml
+++ b/samples/webservice-with-auth-and-keydatabase/pom.xml
@@ -44,6 +44,12 @@
 			<type>war</type>
 		</dependency>
 
+		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.43</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>org.testng</groupId>
