--- a/samples/webservice-with-auth-and-keydatabase/pom.xml
+++ b/samples/webservice-with-auth-and-keydatabase/pom.xml
@@ -57,6 +57,11 @@
 			<version>${testng.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.crysil.gatekeeper</groupId>
+			<artifactId>basic-auth-plugins</artifactId>
+			<version>2.0-1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
