--- a/modules/actors/java/staticKeyEncryption/pom.xml
+++ b/modules/actors/java/staticKeyEncryption/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>org.crysil.actor</groupId>
-  <artifactId>staticKeyEncryption</artifactId>
+  <artifactId>software-crypto</artifactId>
   
     <parent>
         <artifactId>main</artifactId>
