--- a/samples/webservice-with-auth-and-keydatabase/pom.xml
+++ b/samples/webservice-with-auth-and-keydatabase/pom.xml
@@ -30,6 +30,12 @@
 			<artifactId>software-crypto</artifactId>
 			<version>${crysil.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.crysil.actor</groupId>
+			<artifactId>singlekey-keystore</artifactId>
+			<version>${crysil.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.crysil</groupId>
