cloudks keystore init

--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -17,6 +17,7 @@
         <module>actors/java/invertedTrustActor</module>
         <module>actors/java/software-crypto</module>
         <module>actors/java/singlekey-keystore</module>
+        <module>actors/java/cloudks-keystore</module>
         <module>actors/java/smcc</module>
         <module>actors/java/u2f-android</module>
         <module>actors/java/u2f-pkcs11</module>
