--- a/modules/pom.xml
+++ b/modules/pom.xml
@@ -56,6 +56,7 @@
         <spongycastle.version>1.54.0.0</spongycastle.version>
         <gson.version>2.6.1</gson.version>
         <json-schema-validator.version>2.2.6</json-schema-validator.version>
+        <spring.version>4.2.9.RELEASE</spring.version>
 
         <!-- Testing -->
         <testng.version>6.8.21</testng.version>
