--- a/samples/webservice-with-auth-and-keydatabase/pom.xml
+++ b/samples/webservice-with-auth-and-keydatabase/pom.xml
@@ -27,13 +27,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.crysil.actor</groupId>
-			<artifactId>software-crypto</artifactId>
-			<version>${crysil.version}</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.crysil.actor</groupId>
-			<artifactId>singlekey-keystore</artifactId>
+			<artifactId>cloudks-keystore</artifactId>
 			<version>${crysil.version}</version>
 		</dependency>
 
@@ -44,6 +38,12 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.43</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.crysil.communications</groupId>
 			<artifactId>http-json-receiver</artifactId>
 			<version>${crysil.version}</version>
@@ -51,9 +51,10 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>mysql</groupId>
-		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.43</version>
+			<groupId>org.crysil.communications</groupId>
+			<artifactId>http-json-receiver</artifactId>
+			<version>${crysil.version}</version>
+			<type>war</type>
 		</dependency>
 
 		<!-- Test -->
