--- a/samples/android/webservice/pom.xml
+++ b/samples/android/webservice/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.crysil.instance</groupId>
-	<artifactId>android-webserivce</artifactId>
+	<artifactId>android-webservice</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 
