make server url configurable

--- a/samples/android/webservice/src/main/resources/application.properties
+++ b/samples/android/webservice/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# external websocket url (if run behind a reverse proxy or non-toplevel deployment)
+serverUrl = wss://crysil.iaik.tugraz.at:443/tomcat/CrysilAndroidRelayService
 # GCM communication
 gcmServerKey = TODOENTERYOURGCMKEY
 # Keystore for signing SkyTrust Android server certificates
